--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "coffeenow",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --driver-package practicalmeteor:mocha --port 4000"
   },
   "dependencies": {
     "meteor-node-stubs": "~0.2.0"
